<resources>
    <string name="app_name">NavDemo1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="example_2">NavDemo 2</string>
    <string name="sign_up">SIGN UP</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_txt">Terms and conditions</string>
    <string name="next">Next>></string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="welcome_txt">Welcome</string>
</resources>